--- a/src/index.css
+++ b/src/index.css
@@ -142,15 +142,18 @@ main {
 }
 
 .instruction-item-two-to-four {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    column-gap: 10px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+  display: grid;
+
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 100px;
+  grid-gap: 10px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .instruction-separator {
     margin: 20px auto;
+    margin-top: 55px;
     width: 80%;
     border: none;
     border-top: 1px solid #ccc;
