--- a/src/index.css
+++ b/src/index.css
@@ -153,7 +153,7 @@ main {
 
 .instruction-separator {
     margin: 20px auto;
-    margin-top: 55px;
+    margin-top: 75px;
     width: 80%;
     border: none;
     border-top: 1px solid #ccc;
@@ -1011,7 +1011,7 @@ main {
 
   .content-container {
    width: 90vw;
-   margin-left: auto;
+   margin-left: 40px;
  }
   
   .model-section {
@@ -1020,7 +1020,15 @@ main {
 
   
   .instructions-section {
-   bottom: 130px; /* Align it to the bottom */
+   bottom: 100px; /* Align it to the bottom */
+  }
+
+  .instruction-separator {
+    margin-top: 100px;
+}
+
+.try-it-btn {
+	margin-bottom: 50px;
   }
 
 .image-popup-content {
@@ -1217,7 +1225,7 @@ main {
   }
 
   .model-section {
-   margin-bottom: 280px;
+   margin-bottom: 300px;
   }
   
 .instruction-item {
@@ -1490,7 +1498,7 @@ font-size: 14px;
   }
 
   .instructions-section {
-   bottom: 100px; /* Align it to the bottom */
+   bottom: 100px; 
   }
   
 
@@ -1505,6 +1513,10 @@ font-size: 14px;
 
 .instruction-item-two-to-four p{
 font-size: 14px;
+}
+
+.instruction-separator {
+  margin-top: 130px;
 }
 
 .instruction-item-five p{
@@ -2051,15 +2063,19 @@ font-size: 10px;
  }
   
   .model-section {
-   margin-bottom: 580px;
+   margin-bottom: 500px;
   }
   
   .instructions-section {
-   bottom: 120px; /* Align it to the bottom */
+   bottom: 70px; /* Align it to the bottom */
   }
 
 .instruction-item {
     padding: 5px;
+}
+
+.instruction-separator {
+  margin-top: 205px;
 }
 
   .try-it-btn {
@@ -2363,6 +2379,10 @@ font-size: 10px;
 
 .instruction-item-two-to-four p{
 font-size: 10px;
+}
+
+.instruction-separator {
+  margin-top: 85px;
 }
 
 .instruction-item-five p{
