--- a/src/index.css
+++ b/src/index.css
@@ -1641,7 +1641,7 @@ font-size: 14px;
 }
 
 /* Big and Small Mobile Landscape */
-@media (max-width: 1000px) and (max-height: 435px) and (orientation: landscape) {
+@media (max-width: 1000px) and (max-height: 435px) and (orientation: landscape) and (-webkit-max-device-pixel-ratio: 2){
   .desktop-nav-links {
     display: none; /* Hides the desktop navigation on mobile */
   }
