--- a/src/index.css
+++ b/src/index.css
@@ -1481,7 +1481,9 @@ font-size: 14px;
 
 
   * {
-    box-sizing: border-box;
+    //box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
 
   body {
