--- a/src/index.css
+++ b/src/index.css
@@ -1481,9 +1481,7 @@ font-size: 14px;
 
 
   * {
-    //box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    box-sizing: border-box;
   }
 
   body {
@@ -1739,6 +1737,8 @@ font-size: 14px;
 
   * {
     box-sizing: border-box;
+    margin: 0;
+  padding: 0;
   }
 
   body {
