--- a/src/index.css
+++ b/src/index.css
@@ -1736,7 +1736,7 @@ font-size: 14px;
   }
 
   * {
-    box-sizing: border-box;
+    //box-sizing: border-box;
     margin: 0;
   //padding: 0;
   }
