--- a/src/index.css
+++ b/src/index.css
@@ -1736,9 +1736,7 @@ font-size: 14px;
   }
 
   * {
-    //box-sizing: border-box;
-    //margin: 0;
-  //padding: 0;
+    box-sizing: border-box;
   }
 
   body {
